--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ build-backend = "flit_core.buildapi"
 name = "cocotb_kernel"
 authors = [{name = "Matthew Michilot", email = "matthew.michilot@gmail.com"}]
 readme = "README.md"
-dependencies = ["jupyter_client", "cocotb", "ipykernel"]
+dependencies = ["cocotb>=1.8.1"]
 requires-python = ">=3.10,<4"
 license = {file = "LICENSE"}
 classifiers = ["License :: OSI Approved :: MIT License"]
