--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ classifiers = [
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     "Framework :: cocotb",
+    "Framework :: Jupyter",
     "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)"
 ]
 dynamic = ["version", "description"]
