--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ dynamic = ["version", "description"]
 Source = "https://github.com/mmichilot/cocotb_kernel"
 
 [project.optional-dependencies]
-dev = [
-    "ruff ~=0.5.0" 
+lint = [
+    "ruff ~= 0.5.0",
+    "mypy ~= 1.10.0"
 ]
