Add cocotb_kernel as first party for ruff

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,3 +51,8 @@ fixable = ["ALL"]
 
 [tool.ruff.lint.pydocstyle]
 convention = "google"
+
+[tool.ruff.lint.isort]
+known-first-party = [
+    "cocotb_kernel"
+]
