--- a/example/cocotb.toml
+++ b/example/cocotb.toml
@@ -3,7 +3,5 @@ hdl_toplevel = "dff"
 hdl_toplevel_lang = "verilog"
 
 [build]
-verilog_sources = ["./dff.sv"]
-
-[test]
 waves = true
+sources = ["./dff.sv"]
