--- a/binder/environment.yml
+++ b/binder/environment.yml
@@ -11,7 +11,7 @@ channels:
 
 dependencies:
   # runtime dependencies
-  - python >=3.11
+  - python >=3.11,<3.14
   - jupyterlab >=4.0.0,<5
   # build dependencies
   - flit
